cmake_minimum_required(VERSION 3.4)
project(tutorialspoint_cpp_tutorial)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES code/main.cpp code/variable_types.cpp code/static_storage.cpp.cpp code/calling_a_function.cpp code/default_value_in_a_function.cpp code/defining_numbers_in_cpp.cpp code/math_operations_in_cpp.cpp code/random_nembers_in_cpp.cpp code/accessing_arrays_elements.cpp code/accessing_arrays_elements.h code/character_string.cpp code/string_class.cpp code/using_pointers_in_cpp.cpp code/creating_references_in_cpp.cpp code/current_date_and_time.cpp code/format_time_using_struct_tm.cpp code/standard_error_stream.cpp code/standard_input_stream.cpp code/standard_clog_stream.cpp code/accessing_structure_members.cpp code/structures_as_functions_arguments.cpp code/pointers_to_structures.cpp)
add_executable(tutorialspoint_cpp_tutorial ${SOURCE_FILES})
add_executable(main code/main.cpp)
add_executable(sizeof code/sizeof.cpp)
add_executable(variable_types code/variable_types.cpp)
add_executable(static_storage.cpp code/static_storage.cpp.cpp)
add_executable(calling_a_function code/calling_a_function.cpp)
add_executable(default_value_in_a_function code/default_value_in_a_function.cpp)
add_executable(defining_numbers_in_cpp code/defining_numbers_in_cpp.cpp)
add_executable(math_operations_in_cpp code/math_operations_in_cpp.cpp)
add_executable(random_nembers_in_cpp code/random_nembers_in_cpp.cpp)
add_executable(accessing_arrays_elements code/accessing_arrays_elements.cpp)
add_executable(character_string code/character_string.cpp)
add_executable(string_class code/string_class.cpp)
add_executable(using_pointers_in_cpp code/using_pointers_in_cpp.cpp)
add_executable(creating_references_in_cpp code/creating_references_in_cpp.cpp)
add_executable(current_date_and_time code/current_date_and_time.cpp)
add_executable(format_time_using_struct_tm code/format_time_using_struct_tm.cpp)
add_executable(satndard_error_stream code/standard_error_stream.cpp)
add_executable(standard_input_stream code/standard_input_stream.cpp)
add_executable(standard_clog_stream code/standard_clog_stream.cpp)
add_executable(accessing_structure_members code/accessing_structure_members.cpp)
add_executable(structures_as_functions_arguments code/structures_as_functions_arguments.cpp)
add_executable(pointers_to_structures code/pointers_to_structures.cpp)